# CToolTUD

./: .gitignore  CToolConverter_session.pro  CToolTUDRepro.txt  Readme.txt
CToolConverter/: CToolConverter.pro
CToolConverter/projects/cmake_local/: CMakeLists.txt
CToolConverter/src/: main.cpp
NandradCodeGenerator/: .clang-format  NandradCodeGenerator.pro
NandradCodeGenerator/src/: ClassInfo.cpp  ClassInfo.h  CodeGenerator.cpp  constants.cpp
NandradCodeGenerator/src/distfiles/: CodeGen_Constants.cpp  CodeGen_Constants.h  CodeGen_Macros.h  CodeGen_Utilities.cpp  CodeGen_Utilities.h
data/: exDGNB_01_nothing.xml  exDGNB_02_mixed.xml  test.ods  test2.p2  testDGNB.xml
data/DB_Materials/: ClimateBoardWF_707.m6  EpasitEpatherm_412.m6  GlueMortarForClimateBoard_705.m6  GlueMortar_77.m6  KPInnenputz_722.m6  Kalkglaette_721.m6  KlimasanI_419.m6  KnaufGipsTecTem120mm_846.m6  KnaufPerliteTecTemFugenFlaechenspachtel_442.m6  MineralFoamMultipor2019_1821.m6  RemmersGrundputzReGP_485.m6  RemmersiQFix_437.m6  RemmersiQMuniversalAnsetzkleber_1866.m6  RemmersiQTherm_438.m6  RemmersiQTop_439.m6  RotkalkFine_667.m6  RotkalkGrundputz_285.m6  RotkalkInSystemAdhesiveMortar_674.m6  RotkalkStruktur1p5_676.m6  SchwenkGlaettspachtelSkGS_680.m6  TriOTherm_818.m6
data/InputDGNB/: dgnb.xml
data/binaries/linux64/: CmdDiscretise
data/file_templates/: delphinTemplate.d6p
data/templates/: Project.d6p  profile.tsv
data/templates/DB_Materials/: grout.m6  soil.m6
data/templates/binaries/linux64/: MasterSimulator
data/templates/calcTRT/log/: screenlog.txt
data/templates/fmus/: HeatExchangerDynamic.fmu
data/test/: TRTSonde.msim  calcTRT.msim
data/test/calcTRT/fmus/FMUAverage/: modelDescription.xml
data/test/calcTRT/fmus/HeatExchangerDynamic/: modelDescription.xml
data/test/calcTRT/fmus/TRTSonde/resources/: Project.d6p
data/test/calcTRT/fmus/TRTSonde/resources/materials/: grout.m6  soil.m6
data/test/calcTRT/fmus/steadyDetailedPipe/: modelDescription.xml
data/test/calcTRT/log/: progress.txt  screenlog.txt  summary.txt
data/test/calcTRT/results/: strings.csv  synonymous_variables.txt  values.csv
data/test/calcTRT/slaves/TRTSonde/log/: progress.tsv  screenlog.txt
data/test/calcTRT/slaves/TRTSonde/results/: Project_3079178559.g6a  TemperaturFeld.d6o  return_0a - PipeCollectorQdot.d6o  return_0b - PipeCollectorQdot.d6o  return_0b - PipeCollectorTr.d6o  supply_0b - PipeCollectorQdot.d6o  supply_0b - PipeCollectorTr.d6o
data/test/fmus/: FMUAverage.fmu  TRTSonde.fmu  steadyDetailedPipe.fmu
data/test/zip/: modelDescription.xml
data/test/zip/resources/: Project.d6p
data/test/zip/resources/materials/: grout.m6  soil.m6
